# chatbot-unicamp-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  secrets.toml  settings.toml  setup.cfg
bot_unicamp/api/: router.py
bot_unicamp/api/qa/: __init__.py  routes.py
bot_unicamp/bot/: __init__.py  controller.py  models.py  repository.py  service.py
bot_unicamp/common/: __init__.py  exceptions.py  logger.py
bot_unicamp/drivers/: __init__.py  mongodb.py
bot_unicamp/history/: __init__.py  controller.py  models.py  repository.py  service.py
